try fix overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,14 +186,14 @@ section {
   margin-right: 6px;
 }
 
-.header .logo h1 {
-  font-size: 30px;
+.header .logo span {
+  font-size: 25px;
   font-weight: 700;
   letter-spacing: 1px;
   color: #012970;
   font-family: "Nunito", sans-serif;
   margin-top: 3px;
-  display: inline-block;
+  
 }
 
 /*--------------------------------------------------------------
